# Agora-server-gateway-openai-translate

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  go.mod  render.yaml  run.sh
.github/workflows/: docker-publish.yml
agora_rtc_sdk/: PACKAGE_INFO
agora_rtc_sdk/example/common/: sample_local_user_observer.h
agora_rtc_sdk/example/translator_bot/: CMakeLists.txt  audio_pipeline.cpp  audio_pipeline.h  openai_ws_client.cpp  openai_ws_client.h  translator_bot.cpp
cmd/server/: handlers.go  main.go  main_test.go  store.go
deploy/aws/: translator-bot.cfn.yaml
docs/: app.js  index.html  listener.html  speaker.html  style.css
docs/superpowers/plans/: 2026-05-11-rest-control-plane.md
docs/superpowers/specs/: 2026-05-11-rest-control-plane-design.md  2026-05-12-rest-control-plane-handoff.md
